--- a/week1/week1/week1.vcxproj
+++ b/week1/week1/week1.vcxproj
@@ -160,7 +160,10 @@
     <ClCompile Include="week1.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="readme.md" />
+    <None Include="[w1]note.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="file.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
