--- a/week1/week1/week1.vcxproj.filters
+++ b/week1/week1/week1.vcxproj.filters
@@ -31,6 +31,11 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="readme.md" />
+    <Image Include="file.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="[w1]note.md" />
   </ItemGroup>
 </Project>
