--- a/week1/week1/week1.vcxproj
+++ b/week1/week1/week1.vcxproj
@@ -158,7 +158,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="week1.cpp" />
+    <ClCompile Include="recursion.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="file.png" />
