--- a/week1/week1/week1.vcxproj.filters
+++ b/week1/week1/week1.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="week1.cpp">
+    <ClCompile Include="recursion.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
